Fix: correccion de contraste .suggestions li.is-active

--- a/frontend/src/app/pages/nueva-reserva/nueva-reserva.component.scss
+++ b/frontend/src/app/pages/nueva-reserva/nueva-reserva.component.scss
@@ -693,7 +693,7 @@
 /* si usas la clase is-active para navegación con teclado */
 .suggestions li.is-active {
   background-color: #9ca3af;
-  color: #fff;
+  color: #111827;
 }
 
 /* scroll más discreto */
